jvm-profiles.toml: make the JDK a dimension of the sweep
1.21.1 only requires Java 21, but compact object headers (JEP 519) do not exist
before 25, so pinning to what the game asks for would leave the largest lever
found since the flag research everyone still cites sitting on the table.

Running an older pack on a newer JDK is a known flag, not a gamble: Unsafe
memory access warns on 24/25, denies on 26 (--sun-misc-unsafe-memory-access=allow
fixes it), and is removed outright on 27+, which is a real wall for 1.21.1-era
mods. JEP 472 wants native access permitted explicitly too. Those are launcher
options, so JVM_OPTS rather than JVM_XX_OPTS.

Six of seven profiles run today: itzg publishes java21, java25 and java25-graalvm
tags. j26 is declared and disabled because no java26 tag exists yet.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01JkYiJK94Er3YujFjdx9hP3